resolved z-index issue with header and menu

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,6 +8,7 @@
 
 }
 .header-top {
+    position: relative;
     display: flex;
     justify-content: flex-end;
     align-items: center;
